P5 E-Learning/force-app/main/default/objects/Answer_For_Progress__c/Answer_For_Progress__c.object-meta.xml
<CustomObject>
    <label>Answer For Progress</label>
    <nameField>
        <displayFormat>A-{0}</displayFormat>
        <label>Answer For Progress Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answers For Progresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>