P5 E-Learning/force-app/main/default/objects/Answer_For_Progress__c/fields/Option__c.field-meta.xml
<CustomField>
    <fullName>Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Option</label>
    <referenceTo>Option__c</referenceTo>
    <relationshipLabel>Answers For Progresses</relationshipLabel>
    <relationshipName>Answers_For_Progresses</relationshipName>
    <type>Lookup</type>
</CustomField>