P5 E-Learning/force-app/main/default/objects/Answer_For_Progress__c/fields/Progress_Unit_Per_Response__c.field-meta.xml
<CustomField>
    <fullName>Progress_Unit_Per_Response__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Progress Unit Per Response</label>
    <referenceTo>Progress_Unit_Per_Response__c</referenceTo>
    <relationshipLabel>Answers For Progresses</relationshipLabel>
    <relationshipName>Answers_For_Progresses</relationshipName>
    <type>Lookup</type>
</CustomField>