P5 E-Learning/force-app/main/default/objects/Answer_For_Progress__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Answers For Progresses</relationshipLabel>
    <relationshipName>Answers_For_Progresses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>