P5 E-Learning/force-app/main/default/objects/Answer_For_Progress__c/recordTypes/ReportClass.recordType-meta.xml
<RecordType>
    <fullName>ReportClass</fullName>
    <active>true</active>
    <label>ReportClass</label>
</RecordType>